# qkstore

./: .gitignore  LICENSE  README.md  pyproject.toml  qkstore.pyproj  requirements.txt
src/qkstr/: __init__.py  qkstr.py
