[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "qkstr"
version = "0.0.3"
authors = [
  { name="David VanBolt", email="dvanbolt@gmail.com" },
]
dependencies = [
  "orjson >= 0.0.0"
 
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dvanbolt/qkstr"